Bug 106127 - EDITING Can't set pattern as page background (sidebar only)
Summary: EDITING Can't set pattern as page background (sidebar only)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All Linux (All)
: medium minor
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.4.0
Keywords: implementationError
Depends on:
Blocks:
 
Reported: 2017-02-21 13:09 UTC by Katarina Behrens (Inactive)
Modified: 2017-05-05 07:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Katarina Behrens (Inactive) 2017-02-21 13:09:31 UTC
Description:
As per summary

Steps to Reproduce:
1. New or existing Writer document
2. Go to sidebar, page properties deck (2nd from top), styles panel
3. Set background to "pattern"

Actual Results:  
Nothing happens

Expected Results:
A listbox with selection of available patterns appears. A page gets filled with 1st pattern in the list


Reproducible: Always

User Profile Reset: 

Additional Info:
Other fill types seem to work. It also works (to some extent, minus bugs) in ImpressDraw


User-Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:47.0) Gecko/20100101 Firefox/47.0
Comment 1 V Stuart Foote 2017-02-22 14:10:48 UTC
Unfortunately,

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a6cc03546975c9343e2c554f3f049c8f7c35bb54

for bug 102003 for sd had no effect on this sw issue with pattern fills for Background -> Pattern area fill for the Writer Sidebar Page -> Style content panel.

From the Sidebar deck the Pattern area fill action does not launch the Page Style dialog. The dialog works launched from the Context menu Page entry, so guess it is just connected wrong from the Sidebar Page tab Style content panel.

=-testing-=
Version: 5.4.0.0.alpha0+
Build ID: f0c7cbe1d8505d3c1f5a2b2253efda35542c898b
CPU threads: 8; OS: Windows 6.19; UI render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-02-22_04:35:00
Locale: en-US (en_US); Calc: CL
Comment 2 Katarina Behrens (Inactive) 2017-02-22 14:20:28 UTC
(In reply to V Stuart Foote from comment #1)
> Unfortunately,
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=a6cc03546975c9343e2c554f3f049c8f7c35bb54
> 
> for bug 102003 for sd had no effect on this sw issue with pattern fills for
> Background -> Pattern area fill for the Writer Sidebar Page -> Style content
> panel.

That's normal, it is quite different code behind the sidebar panel in Writer (it ain't really possible to share the code here, because data structs representing pages are very different in ImpressDraw vs. Writer)

> From the Sidebar deck the Pattern area fill action does not launch the Page
> Style dialog. 

Which pattern area fill action do you mean?

I can launch page style dialog by clicking on the tiny 'More options' icon in panel title bar (to the right from 'Styles' text)
Comment 3 V Stuart Foote 2017-02-22 16:38:33 UTC
(In reply to Katarina Behrens (CIB) from comment #2)
> (In reply to V Stuart Foote from comment #1)

> > From the Sidebar deck the Pattern area fill action does not launch the Page
> > Style dialog. 
> 
> Which pattern area fill action do you mean?
> 
> I can launch page style dialog by clicking on the tiny 'More options' icon
> in panel title bar (to the right from 'Styles' text)

Sidebar -> Page tab
Styles content panel
Background drop list
select Pattern

No default "pattern" applied, nor does the Page Style dialog open to offer a pattern.

So, yes I can launch the Page Style dialog from the more options button. But the Background drop list widget gets lost when Pattern is selected.
Comment 4 Commit Notification 2017-05-05 07:55:01 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2fdc42d3feda4c89b95a186b4c65d369caa49020

tdf#106127: Sidebar: Enable patterns as page background

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.