tdf#106127: Sidebar: Enable patterns as page background

don't know who in their right mind would want to use it, but it's
possible to set such background in the dialogs, so let's make this
consistent

Change-Id: I0d5dea0edfeae8d8ca65ad2bd18ced9a982a224c