sw/source/uibase/sidebar/PageStylesPanel.hxx
@@ -111,6 +111,7 @@ private:
     XGradient GetGradientSetOrDefault();
     const OUString GetHatchingSetOrDefault();
     const OUString GetBitmapSetOrDefault();
+    const OUString GetPatternSetOrDefault();
 
     void ModifyFillColor();
 
